# aiobungie

./: .codeclimate.yml  .flake8  .gitignore  .gitmodules  .isort.cfg  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  dev-requirements.txt  mypy.ini  noxfile.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup.py  test
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: .codecov.yml  ci.yml
.lefts/: http.py
.metals/: metals.lock.db
_docs/source/: aiobungie.objects.rst  aiobungie.utils.rst  conf.py  index.rst  modules.rst
aiobungie/: __init__.py  __init__.pyi  _about.py  _info.py  aiobungie.py  appinfo.py  builders.py  bungie.py  clans.py  client.py  error.py  framework.py  http.py  metadata.py  player.py  rest.py  traits.py  typedefs.py  undefined.py  undefined.pyi  url.py
aiobungie.egg-info/: PKG-INFO  SOURCES.txt
aiobungie/api/: __init__.py  framework.py  rest.py
aiobungie/crate/: __init__.py  __init__.pyi  activity.py  application.py  character.py  clans.py  components.py  entity.py  fireteams.py  friends.py  items.py  members.py  milestones.py  player.py  profile.py  progressions.py  records.py  season.py  user.py
aiobungie/crates/: __init__.py  __init__.pyi  activity.py  application.py  character.py  clans.py  components.py  entity.py  fireteams.py  friends.py  items.py  milestones.py  profile.py  progressions.py  records.py  season.py  user.py
aiobungie/experiements/: __init__.py  oauth.py
aiobungie/ext/: __init__.py  meta.py  oauth.py
aiobungie/interfaces/: __init__.py  factory.py  rest.py
aiobungie/internal/: __init__.py  __init__.pyi  _backoff.py  assets.py  cache.py  db.py  enums.py  factory.py  helpers.py  helpers.pyi  impl.py  iterators.py  log.py  meta.py  security.py  serialize.py  time.py  traits.py
aiobungie/objects/: __init__.py  __init__.pyi  activity.py  appinfo.py  application.py  avatars.py  bungie.py  character.py  clans.py  entity.py  enums.py  meta.py  player.py  profile.py  user.py
aiobungie/types/: __init__.py  activity.py  application.py  character.py  clans.py  player.py  profile.py  user.py
aiobungie/utils/: __init__.py  __init__.pyi  assets.py  cache.py  enums.py  helpers.py  meta.py  security.py  time.py
docs/: CNAME  aiobungie.html  client.html  conf.py  doc-search.html  error.html  http.html  index.html  index.js  index.rst  modules.rst  rest.html  search.js  url.html
docs/_build/doctrees/: aiobungie.doctree  environment.pickle  index.doctree  modules.doctree  setup.doctree
docs/_build/html/: .buildinfo  aiobungie.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html
docs/_build/html/_sources/: aiobungie.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/aiobungie/: api.html  builders.html  client.html  crate.html  crates.html  error.html  ext.html  framework.html  interfaces.html  internal.html  metadata.html  rest.html  traits.html  typedefs.html  undefined.html  url.html
docs/aiobungie/internal/: _backoff.html  assets.html  enums.html  factory.html  helpers.html  iterators.html  log.html  time.html  traits.html
docs/crate/: activity.html  application.html  character.html  clans.html  entity.html  friends.html  index.html  members.html  player.html  profile.html  season.html  user.html
docs/ext/: index.html  meta.html  oauth.html
docs/interfaces/: index.html  rest.html
docs/internal/: assets.html  cache.html  db.html  enums.html  factory.html  helpers.html  impl.html  index.html  meta.html  security.html  serialize.html  time.html  traits.html
docs/objects/: activity.html  application.html  character.html  clans.html  entity.html  index.html  player.html  profile.html  user.html
docs/source/: aiobungie.experiements.rst  aiobungie.rst
docs/types/: activity.html  application.html  character.html  clans.html  index.html  player.html  profile.html  user.html
examples/: README.md  caching.py  custom_client.py  error_handle.py  error_handling.py  fetch_players.py  hello_world.py  manifest.py  request.py  transfer_items.py  user_oauth2.py
examples/web_app/: .gitignore  README.md  launch.py  requirements.txt
examples/web_app/backend/: README.md  app.py  config.example.py  modules.py  rest.py
examples/web_app/frontend/: README.md  package.json
examples/web_app/frontend/src/: App.css  App.tsx  types.ts
html/aiobungie/: client.html  error.html  http.html  index.html
html/aiobungie/ext/: index.html  oauth.html
html/aiobungie/objects/: activity.html  application.html  character.html  clans.html  index.html  meta.html  player.html  user.html
html/aiobungie/types/: activity.html  application.html  character.html  clans.html  index.html  player.html  user.html
html/aiobungie/utils/: assets.html  cache.html  enums.html  helpers.html  index.html  security.html  time.html
nix/: black-nox.py  client-nox.py  clienttest-nox.py  format-nox.py  lint-nox.py  move.sh  mypy-nox.py  pdoc-nox.py  pdoc3-nox.py  pytest-nox.py  type_check-nox.py
templates/: config.mako  css.mako  custom.css  html.mako  index.html.jinja2  module.html.jinja2  search.mako  syntax-highlighting.css  theme.css
tests/: __init__.py  activity_test.py  application_test.py  character_test.py  clans_test.py  client_test.py  client_tests.py  config.py  entity_test.py  http_tests.py  manifest_test.py  oauth_test.py  player_test.py  test.py  test_application.py  test_character.py  test_clans.py  test_entity.py  test_player.py  test_user.py  user_test.py
tests/_raw/: __init__.py  test_client.py  test_rest.py  test_set_item_lock_state.py
tests/aiobungie/: test_client.py  test_typedefs.py
tests/aiobungie/crate/: test_application.py  test_character.py  test_clans.py  test_components.py  test_entity.py  test_user.py
tests/aiobungie/crates/: test_application.py  test_character.py  test_clans.py  test_components.py  test_user.py
